Bug 1412030 - [MIPS] Emit wasm memory access information. r=lth